--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=leberzsombor96@gmail.com
-spring.mail.password=
+spring.mail.password=jnltohoygqqohpfo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
