--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=leberzsombor96@gmail.com
-spring.mail.password=jnltohoygqqohpfo
+spring.mail.username=pointofsales2022@gmail.com
+spring.mail.password=fdmwatkaswizaamy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
